--- a/server/SpaceDogFight.Server.csproj
+++ b/server/SpaceDogFight.Server.csproj
@@ -4,4 +4,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\shared\Shared.Core.csproj"/>
+    </ItemGroup>
 </Project>
